@@ -33,7 +33,7 @@ extern "C" {
 #define MagickLibAddendum  "-5"
 #define MagickLibInterface  3
 #define MagickLibMinInterface  3
-#define MagickReleaseDate  "2010-04-17"
+#define MagickReleaseDate  "2010-04-23"
 #define MagickChangeDate   "20100417"
 #define MagickAuthoritativeURL  "http://www.imagemagick.org"
 #define MagickHomeURL  "file:///usr/local/share/doc/ImageMagick-6.6.1/index.html"
